@@ -3,6 +3,7 @@
 *
 
 - New NXSL functions: gethostbyaddr, gethostbyname, md5, sha1
+- Added posibility to wakeup unmanaged node
 - Management console:
 	- Fixed broken popup menu actions on "Interfaces" tab
 
